--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,13 @@
             "email": "azpirin123z@yandex.ru"
         }
     ],
-    "require": {}
+    
+
+    "require": {
+	"php": "^7.2",
+        "vendor/package": "1.3.2",
+        "vendor/package2": "1.*",
+        "vendor/package3": "^2.0.3"
+    }
 }
+
