--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	"php": "^7.2",
         "vendor/package": "1.3.2",
         "vendor/package2": "1.*",
-        "vendor/package3": "^2.0.3"
+        "vendor/package3": "^2.0.3",
 	"php-project-lvl1/php-project-lvl1": "dev-bugfix as 1.0.x-dev"  
     }
 }
