--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,15 @@
 	"php": "^7.2",
         "vendor/package": "1.3.2",
         "vendor/package2": "1.*",
-        "vendor/package3": "^2.0.3",
-	"dev-master": "1.0.x-dev" 
+        "vendor/package3": "^2.0.3"
+	
     }
+	 "require-dev": {
+    "symfony/var-dumper": "^4.0",
+    "phpunit/phpunit": "*",
+    "squizlabs/php_codesniffer": "*",
+    "jetbrains/phpstorm-stubs": "dev-master",
+    "felixfbecker/language-server": "^5.4"
+  }
 }
 
