--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,9 @@
 	"php": "^7.2",
         "vendor/package": "1.3.2",
         "vendor/package2": "1.*",
-        "vendor/package3": "^2.0.3"
-	
+        "vendor/package3": "^2.0.3",
+	"anazont/php-project-lvl1": "dev-master" 
     }
-	 "require-dev": {
-    "symfony/var-dumper": "^4.0",
-    "phpunit/phpunit": "*",
-    "squizlabs/php_codesniffer": "*",
-    "jetbrains/phpstorm-stubs": "dev-master",
-    "felixfbecker/language-server": "^5.4"
-  }
+	 
 }
 
