--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "anazont/php-project-lvl1",
-	"bin": ["bin/brain-games"],
+    "bin": ["bin/brain-games"],
+    "type": "library",
     "description": "php-project-lvl1",
     "authors": [
         {
@@ -8,15 +9,11 @@
             "email": "azpirin123z@yandex.ru"
         }
     ],
-    
-
+    "licence": "MIT",
     "require": {
-	"php": "^7.2",
-        "vendor/package": "1.3.2",
-        "vendor/package2": "1.*",
-        "vendor/package3": "^2.0.3",
-	"anazont/php-project-lvl1": "dev-bugfix as 1.0.x-dev"
-    }
+        "php": ">=5.3.0",
+        "wp-cli/php-cli-tools": "^0.11"
+    }    
 	 
 }
 
