--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,16 @@
         }
     ],
     "licence": "MIT",
-	
-	
+    "scripts": {
+    "phpcs": "phpcs"
+    },
     "require": {
         "php": ">=5.3.0",
         "wp-cli/php-cli-tools": "^0.11"
-    }    
+    } ,   
+    "require-dev": {
+    "squizlabs/php_codesniffer": "*"
+  }
 	 
 }
 
