--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ php:
   - '7.2'
 
 install:
-  - composer self-update
   - make install
 
-script: make lint
+script: make lint test
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
