--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
     },
     "require": {
         "php": ">=5.3.0",
-        "wp-cli/php-cli-tools": "^0.11"
+        "wp-cli/php-cli-tools": "^0.11",
+	"vendor/package": "1.3.2",
+        "vendor/package2": "1.*",
+        "vendor/package3": "^2.0.3"
     } ,   
     "require-dev": {
     "squizlabs/php_codesniffer": "*"
