--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,12 @@
     "autoload": {
         "files": [
             "src/Cli.php",
-	    "src/games/even.php"
+	    "src/games/even.php",
+	    "src/games/calc.php"
         ]
     },
     "bin": ["bin/brain-even",
-        "bin/brain-calc"
+            "bin/brain-calc"
     ],
     "description": "php-project-lvl1",
     "authors": [
