--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
             "src/Cli.php",
 	    "src/games/even.php",
 	    "src/games/calc.php",
-	    "src/games/gcd.php"
+	    "src/games/gcd.php",
+	    "src/games/progression.php"
         ]
     },
     "bin": ["bin/brain-even",
             "bin/brain-calc",
-	    "bin/brain-gcd"
+	    "bin/brain-gcd",
+ 	    "bin/brain-progression"
     ],
     "description": "php-project-lvl1",
     "authors": [
