--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,16 @@
 	    "src/games/even.php",
 	    "src/games/calc.php",
 	    "src/games/gcd.php",
-	    "src/games/progression.php"
+	    "src/games/progression.php",
+ 	    "src/games/prime.php"
         ]
     },
     "bin": ["bin/brain-even",
             "bin/brain-calc",
 	    "bin/brain-gcd",
- 	    "bin/brain-progression"
+ 	    "bin/brain-progression",
+  	    "bin/brain-prime"
+
     ],
     "description": "php-project-lvl1",
     "authors": [
